--- a/src/style/element/index.scss
+++ b/src/style/element/index.scss
@@ -5,4 +5,4 @@
 'base': #1dc779, ), 'warning': ( // 警告色
 'base': #ffb302, ), 'danger': ( // 危险色
 'base': #e26237, ), 'error': ( // 错误色
-'base': #cf4444, ), ))
+'base': #cf4444, ), ));
